iai-callgrind/tests/ui/test_main_invalid_config_or_functions.stderr
error: unexpected end of macro invocation
 --> tests/ui/test_main_invalid_config_or_functions.rs:4:22
  |
4 |     main!(functions = );
  |                      ^ missing tokens in macro arguments

warning: unused import: `BinaryBenchmarkConfig`
  --> tests/ui/test_main_invalid_config_or_functions.rs:16:31
   |
16 |     use iai_callgrind::{main, BinaryBenchmarkConfig};
   |                               ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
  --> tests/ui/test_main_invalid_config_or_functions.rs:15:1
   |
15 | mod test_main_when_literal_as_config {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `RunnerLibraryBenchmarkConfig: From<BinaryBenchmarkConfig>` is not satisfied
  --> tests/ui/test_main_invalid_config_or_functions.rs:10:5
   |
10 | /     main!(
11 | |         config = BinaryBenchmarkConfig::default();
12 | |         functions = some_func);
   | |______________________________^ the trait `From<BinaryBenchmarkConfig>` is not implemented for `RunnerLibraryBenchmarkConfig`
   |
   = help: the following implementations were found:
             <RunnerLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
             <RunnerLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
             <RunnerLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
   = note: required because of the requirements on the impl of `Into<RunnerLibraryBenchmarkConfig>` for `BinaryBenchmarkConfig`
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `RunnerLibraryBenchmarkConfig: From<&str>` is not satisfied
  --> tests/ui/test_main_invalid_config_or_functions.rs:18:5
   |
18 | /     main!(
19 | |         config = "my_config";
20 | |         functions = some_func);
   | |______________________________^ the trait `From<&str>` is not implemented for `RunnerLibraryBenchmarkConfig`
   |
   = help: the following implementations were found:
             <RunnerLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
             <RunnerLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
             <RunnerLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
   = note: required because of the requirements on the impl of `Into<RunnerLibraryBenchmarkConfig>` for `&str`
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
